Revise README for clarity and conciseness
Updated README to clarify functionality and installation instructions.